# xModelGenQT

./: CMakeLists.txt  README.md  mainwindow.ui  ui_mainwindow.h  xModelGen.pro  xModelGen.sln  xModelGen.vcxproj
dxflib/: dxflib.vcxproj.filters
res/: mainwindow.ui  resource.rc  xmodel_gen.qrc
res/installer/: xmodel_gen.iss
src/: AutoWire.cpp  AutoWire.h  BoxGraphicsScene.cpp  BoxGraphicsScene.h  BoxGraphicsView.cpp  BoxGraphicsView.h  Model.cpp  Model.h  Node.h  main.cpp  mainwindow.cpp  mainwindow.h  model_utils.h
src/dxf/: dxf_data.h  dxf_reader.cpp  dxf_reader.h
src/dxflib/: dxflib.vcxproj
